--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,24 @@
 [submodule "emacs.d/ruby-mode"]
 	path = emacs.d/ruby-mode
 	url = git://github.com/gnuyuva/ruby-mode.git
+[submodule "emacs.d/rinari"]
+	path = emacs.d/rinari
+	url = git://github.com/eschulte/rinari.git
+[submodule "emacs.d/yaml-mode"]
+	path = emacs.d/yaml-mode
+	url = git://github.com/yoshiki/yaml-mode.git
+[submodule "emacs.d/js2-mode"]
+	path = emacs.d/js2-mode
+	url = git://github.com/mooz/js2-mode.git
+[submodule "emacs.d/rhtml-mode"]
+	path = emacs.d/rhtml-mode
+	url = git://github.com/eschulte/rhtml.git
+[submodule "emacs.d/haml-mode"]
+	path = emacs.d/haml-mode
+	url = git://github.com/nex3/haml-mode.git
+[submodule "emacs.d/sass-mode"]
+	path = emacs.d/sass-mode
+	url = git://github.com/nex3/sass-mode.git
+[submodule "emacs.d/cucumber-mode"]
+	path = emacs.d/cucumber-mode
+	url = git://github.com/michaelklishin/cucumber.el.git
