added mustache mode for handlebars

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "emacs.d/vendor/coffee-mode"]
 	path = emacs.d/vendor/coffee-mode
 	url = git://github.com/defunkt/coffee-mode.git
+[submodule "emacs.d/vendor/mustache-mode"]
+	path = emacs.d/vendor/mustache-mode
+	url = git://github.com/defunkt/mustache.git
